--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   
   
 <style>
+body{background-color:linear-gradient(#276ab3,#add8e6,#add8e6,#276ab3)}
 table {
   background-color:#add8e6;
 	border-collapse:collapse;
@@ -44,12 +45,14 @@ td {
 </head>
 
 <body translate="no" >
-  <body bgcolor="yellow">
+  <body>
+<text-align="center">
+<h1>Tic tac Toe by Swapnil</h1>
 <div id="tictactoe"></div>
 		<div align="left">
-      <h1>Tic tac Toe by Swapnil</h1>
+      
 			<span id='turn'>Player X</span>
-		</div>
+		</div></text>
   
   
       <script id="rendered-js" >
