--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   
 <style>
-body{background-color:linear-gradient(#276ab3,#add8e6,#add8e6,#276ab3)}
+body{background:linear-gradient(#276ab3,#add8e6,#add8e6,#276ab3)}
 table {
   background-color:#add8e6;
 	border-collapse:collapse;
