--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   
 <style>
-body{background:linear-gradient(#276ab3,#add8e6,#add8e6,#276ab3);
+body{background:linear-gradient(to bottom left,#FF1493,#9400D3,#FF1493,yellow);
 background-repeat:no-repeat;
 }
 table {
