--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   
   
 <style>
-body{background:linear-gradient(to bottom left,#FF1493,#9400D3,#FF1493,yellow);
-background-repeat:no-repeat;
+body{background:linear-gradient(to bottom left,#FF1493,#9400D3,#FF1493,yellow)
 }
 table {
   background-color:#add8e6;
@@ -51,9 +50,9 @@ td {
 <text-align="center">
 <h1>Tic tac Toe by Swapnil</h1>
 <div id="tictactoe"></div>
-		<div align="left">
+		<div align="left"><br><br>
       
-			<span id='turn'>Player X</span>
+			<span id='turn'><h1>Player X</h1></span>
 		</div></text>
   
   
